--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
   </div>
   <!-- / Block -->
 
+  <!-- Block -->
   <div id="Skills" class="theme-bg-white">
     <div class="landing-block pb-5">
       <div class="container px-3">
@@ -230,6 +231,7 @@
     </div>
     <div class="landing-separator-stripes my-4"></div>
   </div>
+  <!-- / Block -->
 
   <!-- Block -->
   <div id="Proyects" class="landing-block ui-bg-cover ui-bg-fixed ui-bg-overlay-container text-white"
