Correción de texto

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <i class="bi bi-code"></i> Carlos García <i class="bi bi-code-slash"></i>
               </h1>
               <p class="lead text-white mb-2">
-                // Developer .Net Junior.
+                // Backend Developer
               </p>
             </div>
           </div>
@@ -99,11 +99,11 @@
         <hr class="landing-separator border-primary mx-auto mt-5 mb-4" />
         <div class="lead mb-5">
           <p>
-            Hello! I am a Backend developer from Mexico focused
-            mainly in web development, I am constantly
-            learning and prepared to face new challenges, I consider myself
-            self-taught and I continue to learn from colleagues with the same passion.
-            I like sports and meet people.
+            Hello! I am a .Net Junior developer from Mexico, I am constantly learning and prepared to face new
+            challenges, I
+            consider myself self-taught and I continue to learn from colleagues with the same passion. I like sports and
+            meeting
+            people.
           </p>
         </div>
         <div class="lead mb-5">
