--- a/index.html
+++ b/index.html
@@ -78,10 +78,9 @@
             <div class="col-lg-7 col-xl-6 text-lg-left text-center mx-xl-5" data-swiper-parallax="-100">
               <p class="lead text-white mb-2">Hi, my name is</p>
               <h1 class="display-1 font-secondary text-white font-weight-semibold mb-2">
-                <i class="bi bi-code"></i> Carlos García <i class="bi bi-code-slash"></i>
+                <i class="bi bi-code"></i> Carlos <i class="bi bi-code-slash"></i>
               </h1>
               <p class="lead text-white mb-2">
-                // Backend Developer
               </p>
             </div>
           </div>
