--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
               </div>
             </div>
             <div class="col-lg-7 col-xl-6 text-lg-left text-center mx-xl-5" data-swiper-parallax="-100">
-              <p class="lead text-white mb-2">Hi, my name is</p>
               <h1 class="display-1 font-secondary text-white font-weight-semibold mb-2">
-                <i class="bi bi-code"></i> Carlos <i class="bi bi-code-slash"></i>
+                <i class="bi bi-code"></i> Hi, my name is Carlos García <i class="bi bi-code-slash"></i>
               </h1>
               <p class="lead text-white mb-2">
               </p>
@@ -98,11 +97,9 @@
         <hr class="landing-separator border-primary mx-auto mt-5 mb-4" />
         <div class="lead mb-5">
           <p>
-            Hello! I am a .Net Junior developer from Mexico, I am constantly learning and prepared to face new
-            challenges, I
-            consider myself self-taught and I continue to learn from colleagues with the same passion. I like sports and
-            meeting
-            people.
+            Hi! I'm an IT engineer from Mexico curious and ready to face challenges, I'm constantly learning,
+            I like technology, meeting people, music and sports, I like to learn new things without losing
+            sight of my goals. I consider myself self-taught and I keep learning from people with the same passion.
           </p>
         </div>
         <div class="lead mb-5">
@@ -248,20 +245,41 @@
         <div class="swiper-container w-auto text-center mx-3" id="landing-testimonials-slider">
           <div class="swiper-wrapper align-items-stretch">
             <div class="swiper-slide h-auto">
-              <img src="assets/img/photos/proyect.png" class="ui-w-80 rounded-0" alt />
+              <img src="assets/img/photos/tab.png" class="ui-w-80 rounded-0" alt />
               <div class="ui-customer-review my-3">
-                Comprehensive System of Spaces
+                My Portfolio
               </div>
-              <strong>SADE</strong><br />
+
+              <div class="mt-5">
+                <a class="theme-text-dark" href="http://www.carlosdevelopp.ga">
+                  <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-dark">
+                    <span><i class="bi bi-globe"></i></span>&nbsp; Website
+                  </button>
+                </a>
+                <a class="theme-text-white" href="https://github.com/Carlosdevelopp/carlosdevelopp.github.io">
+                  <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-dark">
+                    <span><i class="bi bi-git"></i></span>&nbsp; See code
+                  </button>
+                </a>
+              </div>
+
+            </div>
+
+            <div class="swiper-slide h-auto">
+              <img src="assets/img/photos/proyect.png" class="ui-w-80 rounded-circle" alt />
+              <div class="ui-customer-review my-3"></div>
+              <strong></strong><br />
               <div class="social">
                 <button type="button" class="landing-btn btn btn-outline-dark rounded-pill mt-2">
-                  <span><i class="bi bi-globe"></i></span>&nbsp; Website </button><button type="button"
+                  <span><i class="bi bi-globe"></i></span>&nbsp; Website
+                </button>
+                <button type="button"
                   class="landing-btn btn btn-outline-dark rounded-pill mt-2">
                   <span><i class="bi bi-git"></i></span>&nbsp; See code
-                </button>
               </div>
             </div>
-            <div class="swiper-slide h-auto">
+
+            <!-- <div class="swiper-slide h-auto">
               <img src="assets/img/photos/proyect.png" class="ui-w-80 rounded-circle" alt />
               <div class="ui-customer-review my-3"></div>
               <strong></strong><br />
@@ -270,21 +288,10 @@
                   <span><i class="bi bi-globe"></i></span>&nbsp; Website</button><button type="button"
                   class="landing-btn btn btn-outline-dark rounded-pill mt-2">
                   <span><i class="bi bi-git"></i></span>&nbsp; See code
-                  </img>
-              </div>
-            </div>
-            <div class="swiper-slide h-auto">
-              <img src="assets/img/photos/proyect.png" class="ui-w-80 rounded-circle" alt />
-              <div class="ui-customer-review my-3"></div>
-              <strong></strong><br />
-              <div class="social">
-                <button type="button" class="landing-btn btn btn-outline-dark rounded-pill mt-2">
-                  <span><i class="bi bi-globe"></i></span>&nbsp; Website</button><button type="button"
-                  class="landing-btn btn btn-outline-dark rounded-pill mt-2">
-                  <span><i class="bi bi-git"></i></span>&nbsp; See code
                 </button>
               </div>
-            </div>
+            </div> -->
+            
           </div>
         </div>
         <div id="landing-testimonials-slider-next" class="swiper-button-next custom-icon">
