--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <!-- Header -->
   <div id="Home" class="ui-bg-cover ui-bg-fixed text-white"
-    style="background-image: url(assets/img/photos/background.jpg)">
+    style="background-image: url(assets/img/photos/ii.jpg)">
     <div class="swiper-wrapper">
       <div class="swiper-slide jumbotron ui-hero ui-mh-100vh bg-transparent">
         <div class="container-fluid justify-content-center px-lg-5">
@@ -231,7 +231,7 @@
 
   <!-- Block -->
   <div id="Proyects" class="landing-block ui-bg-cover ui-bg-fixed ui-bg-overlay-container text-white"
-    style="background-image: url(assets/img/photos/background.jpg)">
+    style="background-image: url(assets/img/photos/ii.jpg)">
     <div class="ui-bg-overlay bg-dark opacity-75"></div>
     <div class="container px-3">
       <div class="text-center text-tiny font-weight-bold opacity-50 mb-3">
@@ -245,19 +245,19 @@
         <div class="swiper-container w-auto text-center mx-3" id="landing-testimonials-slider">
           <div class="swiper-wrapper align-items-stretch">
             <div class="swiper-slide h-auto">
-              <img src="assets/img/photos/tab.png" class="ui-w-80 rounded-0" alt />
+              <img src="assets/img/photos/22.png" class="ui-w-80 rounded-0" alt />
               <div class="ui-customer-review my-3">
                 My Portfolio
               </div>
 
               <div class="mt-5">
                 <a class="theme-text-dark" href="http://www.carlosdevelopp.ga">
-                  <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-dark">
+                  <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
                     <span><i class="bi bi-globe"></i></span>&nbsp; Website
                   </button>
                 </a>
                 <a class="theme-text-white" href="https://github.com/Carlosdevelopp/carlosdevelopp.github.io">
-                  <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-dark">
+                  <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
                     <span><i class="bi bi-git"></i></span>&nbsp; See code
                   </button>
                 </a>
@@ -268,15 +268,20 @@
             <div class="swiper-slide h-auto">
               <img src="assets/img/photos/proyect.png" class="ui-w-80 rounded-circle" alt />
               <div class="ui-customer-review my-3"></div>
-              <strong></strong><br />
-              <div class="social">
-                <button type="button" class="landing-btn btn btn-outline-dark rounded-pill mt-2">
-                  <span><i class="bi bi-globe"></i></span>&nbsp; Website
-                </button>
-                <button type="button"
-                  class="landing-btn btn btn-outline-dark rounded-pill mt-2">
-                  <span><i class="bi bi-git"></i></span>&nbsp; See code
+           
+              <div class="mt-5">
+                <a class="theme-text-dark">
+                  <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
+                    <span><i class="bi bi-globe"></i></span>&nbsp; Website
+                  </button>
+                </a>
+                <a class="theme-text-white">
+                  <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
+                    <span><i class="bi bi-git"></i></span>&nbsp; See code
+                  </button>
+                </a>
               </div>
+
             </div>
 
             <!-- <div class="swiper-slide h-auto">
