--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <!-- Header -->
   <div id="Home" class="ui-bg-cover ui-bg-fixed text-white"
-    style="background-image: url(assets/img/photos/mm.jpg)">
+    style="background-image: url(assets/img/photos/binario.jpg)">
     <div class="swiper-wrapper">
       <div class="swiper-slide jumbotron ui-hero ui-mh-100vh bg-transparent">
         <div class="container-fluid justify-content-center px-lg-5">
@@ -231,7 +231,7 @@
 
   <!-- Block -->
   <div id="Proyects" class="landing-block ui-bg-cover ui-bg-fixed ui-bg-overlay-container text-white"
-    style="background-image: url(assets/img/photos/ii.jpg)">
+    style="background-image: url(assets/img/photos/laptop.jpg)">
     <div class="ui-bg-overlay bg-dark opacity-75"></div>
     <div class="container px-3">
       <div class="text-center text-tiny font-weight-bold opacity-50 mb-3">
