--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 My Portfolio
               </div>
 
-              <div class="mt-5">
+              <div class="">
                 <a class="theme-text-dark" href="http://www.carlosdevelopp.ga">
                   <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
                     <span><i class="bi bi-globe"></i></span>&nbsp; Website
@@ -271,12 +271,12 @@
            
               <div class="mt-5">
                 <a class="theme-text-dark">
-                  <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
+                  <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white mt-2">
                     <span><i class="bi bi-globe"></i></span>&nbsp; Website
                   </button>
                 </a>
                 <a class="theme-text-white">
-                  <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
+                  <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white mt-2">
                     <span><i class="bi bi-git"></i></span>&nbsp; See code
                   </button>
                 </a>
