--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <!-- Header -->
   <div id="Home" class="ui-bg-cover ui-bg-fixed text-white"
-    style="background-image: url(assets/img/photos/binario.jpg)">
+    style="background-image: url(assets/img/photos/bin.jpg)">
     <div class="swiper-wrapper">
       <div class="swiper-slide jumbotron ui-hero ui-mh-100vh bg-transparent">
         <div class="container-fluid justify-content-center px-lg-5">
@@ -231,7 +231,7 @@
 
   <!-- Block -->
   <div id="Proyects" class="landing-block ui-bg-cover ui-bg-fixed ui-bg-overlay-container text-white"
-    style="background-image: url(assets/img/photos/laptop.jpg)">
+    style="background-image: url(assets/img/photos/lap.jpg)">
     <div class="ui-bg-overlay bg-dark opacity-75"></div>
     <div class="container px-3">
       <div class="text-center text-tiny font-weight-bold opacity-50 mb-3">
@@ -250,15 +250,15 @@
                 My Portfolio
               </div>
 
-              <div class="">
+              <div class="align-items-lg-center">
                 <a class="theme-text-dark" href="http://www.carlosdevelopp.ga">
                   <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
-                    <span><i class="bi bi-globe"></i></span>&nbsp; Website
+                    <span><i class="bi bi-globe"></i></span>Website
                   </button>
                 </a>
-                <a class="theme-text-white" href="https://github.com/Carlosdevelopp/carlosdevelopp.github.io">
+                <a class="align-items-lg-center" href="https://github.com/Carlosdevelopp/carlosdevelopp.github.io">
                   <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
-                    <span><i class="bi bi-git"></i></span>&nbsp; See code
+                    <span><i class="bi bi-git"></i></span>See code
                   </button>
                 </a>
               </div>
