--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
   </nav>
   <!-- / Navbar -->
 
-
   <!-- Animation -->
   <div id="particles-js"></div>
 
@@ -97,9 +96,9 @@
         <hr class="landing-separator border-primary mx-auto mt-5 mb-4" />
         <div class="lead mb-5">
           <p>
-            Hi! I'm an IT engineer from Mexico curious and ready to face challenges, I'm constantly learning,
-            I like technology, meeting people, music and sports, I like to learn new things without losing
-            sight of my goals. I consider myself self-taught and I keep learning from people with the same passion.
+            Hello! I am a junior .NET developer from Mexico curious and ready to face challenges, I am constantly 
+            learning, I like technology, meeting people, music and sports, I like to learn new things without losing sight of 
+            my goals. I consider myself self-taught and I continue to learn from people with the same passion.
           </p>
         </div>
         <div class="lead mb-5">
