--- a/index.html
+++ b/index.html
@@ -133,50 +133,18 @@
             <div class="swiper-container w-auto mx-3" id="landing-logos-slider">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <img src="assets/img/photos/html.png" class="img-fluid hoverable ui-img-grayscale" alt />
-                  <p class="text-center text-tiny font-weight-bold">HTML</p>
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/photos/css.png" class="img-fluid hoverable ui-img-grayscale" alt />
-                  <p class="text-center text-tiny font-weight-bold">CSS</p>
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/photos/javascript.png" class="img-thumbnail hoverable ui-img-grayscale" alt />
-                  <p class="text-center text-tiny font-weight-bold">
-                    JavaScript
-                  </p>
-                </div>
-                <div class="swiper-slide">
                   <img src="assets/img/photos/bootstrap.png" class="img-fluid hoverable ui-img-grayscale" alt />
+                  <p class="text-center text-tiny font-weight-bold">Bootstrap</p>
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/photos/visualstudio.png" class="img-fluid hoverable ui-img-grayscale" alt />
                   <p class="text-center text-tiny font-weight-bold">
-                    Bootstrap
+                    Visual Studio
                   </p>
                 </div>
                 <div class="swiper-slide">
                   <img src="assets/img/photos/git.png" class="img-fluid hoverable ui-img-grayscale" alt />
                   <p class="text-center text-tiny font-weight-bold">Git</p>
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/photos/photo.png" class="img-fluid hoverable ui-img-grayscale" alt />
-                  <p class="text-center text-tiny font-weight-bold">
-                    Photoshop
-                  </p>
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/photos/csharp.png" class="img-fluid hoverable ui-img-grayscale" alt />
-                  <p class="text-center text-tiny font-weight-bold">
-                    C sharp
-                  </p>
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/photos/blazor.png" class="img-fluid hoverable ui-img-grayscale" alt />
-                  <p class="text-center text-tiny font-weight-bold">Blazor</p>
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/photos/net.png" class="img-fluid hoverable ui-img-grayscale" alt />
-                  <p class="text-center text-tiny font-weight-bold">
-                    .Net Core
-                  </p>
                 </div>
                 <div class="swiper-slide">
                   <img src="assets/img/photos/sqlserver.png" class="img-fluid hoverable ui-img-grayscale" alt />
@@ -187,24 +155,6 @@
                 <div class="swiper-slide">
                   <img src="assets/img/photos/mysql.png" class="img-fluid hoverable ui-img-grayscale" alt />
                   <p class="text-center text-tiny font-weight-bold">MySQL</p>
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/photos/visualstudio.png" class="img-fluid hoverable ui-img-grayscale" alt />
-                  <p class="text-center text-tiny font-weight-bold">
-                    Visual Studio
-                  </p>
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/photos/visualcode.png" class="img-fluid hoverable ui-img-grayscale" alt />
-                  <p class="text-center text-tiny font-weight-bold">
-                    Visual Studio Code
-                  </p>
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/photos/dbforge.png" class="img-fluid hoverable ui-img-grayscale" alt />
-                  <h6 class="text-center text-tiny font-weight-bold">
-                    dbForge Studio
-                  </h6>
                 </div>
                 <div class="swiper-slide">
                   <img src="assets/img/photos/consola.png" class="img-fluid hoverable ui-img-grayscale" alt />
