--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <div class="swiper-container w-auto text-center mx-3" id="landing-testimonials-slider">
           <div class="swiper-wrapper align-items-stretch">
             <div class="swiper-slide h-auto">
-              <img src="assets/img/photos/22.png" class="ui-w-80 rounded-0" alt />
+              <img src="assets/img/photos/portfolio.png" class="ui-w-80 rounded-0" alt />
               <div class="ui-customer-review my-3">
                 My Portfolio
               </div>
@@ -217,7 +217,7 @@
             <div class="swiper-slide h-auto">
               <img src="assets/img/photos/proyect.png" class="ui-w-80 rounded-circle" alt />
               <div class="ui-customer-review my-3"></div>
-           
+                Basic CRUD .NET
               <div class="mt-5">
                 <a class="theme-text-dark">
                   <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white mt-2">
@@ -233,7 +233,7 @@
 
             </div>
 
-            <!-- <div class="swiper-slide h-auto">
+            <div class="swiper-slide h-auto">
               <img src="assets/img/photos/proyect.png" class="ui-w-80 rounded-circle" alt />
               <div class="ui-customer-review my-3"></div>
               <strong></strong><br />
@@ -244,7 +244,7 @@
                   <span><i class="bi bi-git"></i></span>&nbsp; See code
                 </button>
               </div>
-            </div> -->
+            </div>
             
           </div>
         </div>
