--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
               </div>
 
             </div>
-
+<!-- 
             <div class="swiper-slide h-auto">
               <img src="assets/img/photos/proyect.png" class="ui-w-80 rounded-circle" alt />
               <div class="ui-customer-review my-3"></div>
@@ -244,7 +244,7 @@
                   <span><i class="bi bi-git"></i></span>&nbsp; See code
                 </button>
               </div>
-            </div>
+            </div> -->
             
           </div>
         </div>
