--- a/index.html
+++ b/index.html
@@ -202,12 +202,12 @@
               <div class="align-items-lg-center">
                 <a class="theme-text-dark" href="http://www.carlosdevelopp.ga">
                   <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
-                    <span><i class="bi bi-globe"></i></span>Website
+                    <span><i class="bi bi-globe"></i></span>&nbsp; Website
                   </button>
                 </a>
                 <a class="align-items-lg-center" href="https://github.com/Carlosdevelopp/carlosdevelopp.github.io">
                   <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
-                    <span><i class="bi bi-git"></i></span>See code
+                    <span><i class="bi bi-git"></i></span>&nbsp; See code
                   </button>
                 </a>
               </div>
@@ -215,17 +215,19 @@
             </div>
 
             <div class="swiper-slide h-auto">
-              <img src="assets/img/photos/proyect.png" class="ui-w-80 rounded-circle" alt />
-              <div class="ui-customer-review my-3"></div>
+              <img src="assets/img/photos/crud.png" class="ui-w-80 rounded-0" alt />
+              <div class="ui-customer-review my-3">
                 Basic CRUD .NET
-              <div class="mt-5">
+              </div>
+
+              <div class="align-items-lg-center">
                 <a class="theme-text-dark">
-                  <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white mt-2">
+                  <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
                     <span><i class="bi bi-globe"></i></span>&nbsp; Website
                   </button>
                 </a>
-                <a class="theme-text-white">
-                  <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white mt-2">
+                <a class="align-items-lg-center">
+                  <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
                     <span><i class="bi bi-git"></i></span>&nbsp; See code
                   </button>
                 </a>
