--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             </div>
 
             <div class="swiper-slide h-auto">
-              <img src="assets/img/photos/crud.png" class="ui-w-80 rounded-0" alt />
+              <img src="assets/img/photos/crud.png" class="ui-w-80" alt />
               <div class="ui-customer-review my-3">
                 Basic CRUD .NET
               </div>
@@ -226,7 +226,7 @@
                     <span><i class="bi bi-globe"></i></span>&nbsp; Website
                   </button>
                 </a>
-                <a class="align-items-lg-center">
+                <a class="align-items-lg-center" href="https://github.com/Carlosdevelopp/Movies_Store_Crud">
                   <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
                     <span><i class="bi bi-git"></i></span>&nbsp; See code
                   </button>
