--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="" />
-  <link rel="icon" type="image/png" href="./assets/img/photos/tab.png" />
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,minimum-scale=1,maximum-scale=1" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900"
     rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <link href="https://fonts.googleapis.com/css?family=Barlow:300,400,500,600,700" rel="stylesheet" />
 
   <!-- Icon fonts -->
@@ -26,7 +26,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="assets/css/fonts/styles.css" />
   <link rel="stylesheet" href="assets/libs/swiper/swiper.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
 </head>
 
 <body>
@@ -96,7 +95,7 @@
         <hr class="landing-separator border-primary mx-auto mt-5 mb-4" />
         <div class="lead mb-5">
           <p>
-            Hello! I am a junior .NET developer from Mexico curious and ready to face challenges, I am constantly 
+            Hello! I am a junior developer from Mexico curious and ready to face challenges, I am constantly 
             learning, I like technology, meeting people, music and sports, I like to learn new things without losing sight of 
             my goals. I consider myself self-taught and I continue to learn from people with the same passion.
           </p>
@@ -132,9 +131,9 @@
           <div class="position-relative px-5">
             <div class="swiper-container w-auto mx-3" id="landing-logos-slider">
               <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <img src="assets/img/photos/bootstrap.png" class="img-fluid hoverable ui-img-grayscale" alt />
-                  <p class="text-center text-tiny font-weight-bold">Bootstrap</p>
+                <div class="swiper-slide">  
+                  <img src="assets/img/photos/csharp.png" class="img-fluid hoverable ui-img-grayscale">
+                  <p class="text-center text-tiny font-weight-bold">C Sharp</p>
                 </div>
                 <div class="swiper-slide">
                   <img src="assets/img/photos/git.png" class="img-fluid hoverable ui-img-grayscale" alt />
@@ -272,17 +271,35 @@
           </p>
         </div>
         <div class="social">
-          <a href="https://twitter.com/CarlosDevelopp" target="_blank" class="twitter">
+          <!-- <a href="https://twitter.com/CarlosDevelopp" target="_blank" class="twitter">
             <i class="ion ion-logo-twitter text-twitter"></i>
           </a>
+
           <a href="https://www.instagram.com/carlos_dream._/?hl=es-la" target="_blank" class="instagram">
             <i class="ion ion-logo-instagram text-instagram"></i>
           </a>
+
           <a href="https://www.linkedin.com/in/carlosdevel/" target="_blank" class="linkedin">
             <i class="ion ion-logo-linkedin text-linkedin"></i>
           </a>
+          
           <a href="https://github.com/Carlosdevelopp" target="_blank" class="GitHub">
-            <i class="ion ion-logo-github text-instagram"></i>
+            <i class="ion ion-logo-github text-instagram"></i> -->
+
+          <a href="https://twitter.com/CarlosDevelopp" target="_blank">
+            <i id="twitter" class="bi bi-twitter"></i>
+          </a>
+
+          <a href="https://www.instagram.com/carlos_dream._/?hl=es-la" target="_blank">
+            <i id="instagram" class="bi bi-instagram"></i>
+          </a>
+
+          <a href="https://www.linkedin.com/in/carlosdevel/" target="_blank">
+            <i id="linkedin" class="bi bi-linkedin"></i>
+          </a>
+
+          <a href="https://github.com/Carlosdevelopp" target="_blank">
+            <i id="github" class="bi bi-github"></i>
           </a>
         </div>
       </div>
