--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,minimum-scale=1,maximum-scale=1" />
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900"
-    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <link href="https://fonts.googleapis.com/css?family=Barlow:300,400,500,600,700" rel="stylesheet" />
+
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700,800" rel="stylesheet">
 
   <!-- Icon fonts -->
   <link rel="stylesheet" href="assets/css/fonts/ionicons.css" />
@@ -25,7 +26,17 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="assets/css/fonts/styles.css" />
+  <!-- Libs -->
   <link rel="stylesheet" href="assets/libs/swiper/swiper.css" />
+  
+  <script src="assets/js/material-ripple.js"></script>
+  <script src="assets/js/layout-helpers.js"></script>
+  
+  <!-- Core scripts -->
+  <script src="assets/js/pace.js"></script>
+ 
+  <!-- Page -->
+  <link rel="stylesheet" href="assets/css/portfolio.css">
 </head>
 
 <body>
@@ -136,10 +147,6 @@
                   <p class="text-center text-tiny font-weight-bold">
                     SQL Server
                   </p>
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/photos/mysql.png" class="img-fluid hoverable ui-img-grayscale" alt />
-                  <p class="text-center text-tiny font-weight-bold">MySQL</p>
                 </div>
                 <div class="swiper-slide">
                   <img src="assets/img/photos/consola.png" class="img-fluid hoverable ui-img-grayscale" alt />
