--- a/index.html
+++ b/index.html
@@ -77,11 +77,15 @@
         <div class="container-fluid justify-content-center px-lg-5">
           <div class="row justify-content-center w-100 pt-3">
             <div class="col-lg-7 col-xl-6 text-lg-left text-center mx-xl-5" data-swiper-parallax="-100">
-              <h1 class="display-1 font-secondary text-white font-weight-semibold mb-2">
-                <i class="bi bi-code"></i> Hi, my name is Carlos García <i class="bi bi-code-slash"></i>
-              </h1>
-              <p class="lead text-white mb-2">
-              </p>
+               <h1 class="display-1 font-secondary text-white font-weight-semibold mb-2">
+                <div class="swiper-slide">
+                  <div class="portfolio-image" style="background-image: url(assets/img/photos/bin.jpg);"></div>
+                  <div class="slider-content align-items-end p-5">
+                    <div class="font-secondary m-md-5 active">
+                      <div class="portfolio-caption text-white font-weight-semibold"><i class="bi-code"></i><br>MY NAME IS CARLOS GARCÍA VELÁZQUEZ<i class="bi bi-code-slash"></i></div>
+                    </div>
+                  </div>
+                </div>
             </div>
           </div>
         </div>
@@ -134,6 +138,10 @@
           <div class="position-relative px-5">
             <div class="swiper-container w-auto mx-3" id="landing-logos-slider">
               <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <img src="assets/img/photos/net.png" class="img-fluid hoverable ui-img-grayscale" alt />
+                  <p class="text-center text-tiny font-weight-bold">.NET</p>
+                </div>
                 <div class="swiper-slide">  
                   <img src="assets/img/photos/csharp.png" class="img-fluid hoverable ui-img-grayscale">
                   <p class="text-center text-tiny font-weight-bold">C Sharp</p>
@@ -224,21 +232,7 @@
                   </button>
                 </a>
               </div>
-
             </div>
-<!-- 
-            <div class="swiper-slide h-auto">
-              <img src="assets/img/photos/proyect.png" class="ui-w-80 rounded-circle" alt />
-              <div class="ui-customer-review my-3"></div>
-              <strong></strong><br />
-              <div class="social">
-                <button type="button" class="landing-btn btn btn-outline-dark rounded-pill mt-2">
-                  <span><i class="bi bi-globe"></i></span>&nbsp; Website</button><button type="button"
-                  class="landing-btn btn btn-outline-dark rounded-pill mt-2">
-                  <span><i class="bi bi-git"></i></span>&nbsp; See code
-                </button>
-              </div>
-            </div> -->
             
           </div>
         </div>
