--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,minimum-scale=1,maximum-scale=1" />
+
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <link href="https://fonts.googleapis.com/css?family=Barlow:300,400,500,600,700" rel="stylesheet" />
@@ -81,8 +82,8 @@
                 <div class="swiper-slide">
                   <div class="portfolio-image" style="background-image: url(assets/img/photos/bin.jpg);"></div>
                   <div class="slider-content align-items-end p-5">
-                    <div class="font-secondary m-md-5 active">
-                      <div class="portfolio-caption text-white font-weight-semibold"><i class="bi-code"></i><br>MY NAME IS CARLOS GARCÍA VELÁZQUEZ<i class="bi bi-code-slash"></i></div>
+                    <div class="font-secondary active">
+                      <div class="portfolio-caption text-white font-weight-semibold"><i class="bi-code"></i>HI, I am Carlos<i class="bi-code"></i></div>
                     </div>
                   </div>
                 </div>
