--- a/index.html
+++ b/index.html
@@ -71,24 +71,25 @@
   <div id="particles-js"></div>
 
   <!-- Header -->
-  <div id="Home" class="ui-bg-cover ui-bg-fixed text-white"
-    style="background-image: url(assets/img/photos/bin.jpg)">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide jumbotron ui-hero ui-mh-100vh bg-transparent">
-        <div class="container-fluid justify-content-center px-lg-5">
-          <div class="row justify-content-center w-100 pt-3">
-            <div class="col-lg-7 col-xl-6 text-lg-left text-center mx-xl-5" data-swiper-parallax="-100">
-               <h1 class="display-1 font-secondary text-white font-weight-semibold mb-2">
-                <div class="swiper-slide">
-                  <div class="portfolio-image" style="background-image: url(assets/img/photos/bin.jpg);"></div>
-                  <div class="slider-content align-items-end p-5">
-                    <div class="font-secondary active">
-                      <div class="portfolio-caption text-white font-weight-semibold"><i class="bi-code"></i>HI, I am Carlos<i class="bi-code"></i></div>
-                    </div>
-                  </div>
-                </div>
+  <div id="Home" class="jumbotron ui-hero ui-mh-100vh ui-bg-cover ui-bg-fixed text-white" style="background-image: url('assets/img/photos/bin.jpg');">
+    <div class="ui-bg-overlay bg-dark opacity-50"></div>
+    <div class="container py-5 px-3">
+      <div class="row pt-4">
+        <div class="w-100">
+
+          <div class="col-md-11 col-lg-8 col-xl-7 text-center mx-auto mb-5">
+            <h1 class="display-3 font-secondary font-weight-bolder mb-4">Hi, my name is Carlos</h1>
+            <div class="lead opacity-75">
+              I am backend developer .NET, 
             </div>
           </div>
+
+          <div class="col-12 text-center">
+            <a href="#" class="btn btn-lg btn-outline-white">Hello
+              <strong>Hello</strong>
+            </a>
+          </div>
+
         </div>
       </div>
     </div>
