--- a/index.html
+++ b/index.html
@@ -67,27 +67,30 @@
   </nav>
   <!-- / Navbar -->
 
-  <!-- Animation -->
   <div id="particles-js"></div>
 
   <!-- Header -->
-  <div id="Home" class="jumbotron ui-hero ui-mh-100vh ui-bg-cover ui-bg-fixed text-white" style="background-image: url('assets/img/photos/bin.jpg');">
+  <div id="Home" class="jumbotron ui-hero ui-mh-100vh ui-bg-cover ui-bg-fixed text-white particles-js" style="background-image: url('assets/img/photos/bin.jpg');">
     <div class="ui-bg-overlay bg-dark opacity-50"></div>
     <div class="container py-5 px-3">
       <div class="row pt-4">
         <div class="w-100">
 
           <div class="col-md-11 col-lg-8 col-xl-7 text-center mx-auto mb-5">
-            <h1 class="display-3 font-secondary font-weight-bolder mb-4">Hi, my name is Carlos</h1>
+            <h1 class="display-3 font-secondary font-weight-bolder mb-4">Hi, my name is Carlos.</h1>
             <div class="lead opacity-75">
-              I am backend developer .NET, 
+              I am backend developer .NET junior 
             </div>
           </div>
 
-          <div class="col-12 text-center">
-            <a href="#" class="btn btn-lg btn-outline-white">Hello
-              <strong>Hello</strong>
-            </a>
+          <div class="text-center">
+            <button type="button" class="landing-btn btn btn-lg rounded-pill">
+              <div class="col-12">
+                <a href="./assets/docs/CV.pdf" download="CV" class="btn btn-lg btn-outline-white">Download
+                  <strong>CV</strong>
+                </a>
+              </div>
+            </button>
           </div>
 
         </div>
