--- a/index.html
+++ b/index.html
@@ -69,34 +69,30 @@
 
   <div id="particles-js"></div>
 
+  <div class="uikit-example">
   <!-- Header -->
-  <div id="Home" class="jumbotron ui-hero ui-mh-100vh ui-bg-cover ui-bg-fixed text-white particles-js" style="background-image: url('assets/img/photos/bin.jpg');">
-    <div class="ui-bg-overlay bg-dark opacity-50"></div>
-    <div class="container py-5 px-3">
-      <div class="row pt-4">
+  <div id="Home" class="jumbotron ui-hero ui-mh-100vh ui-bg-cover ui-bg-fixed text-white overflow-hidden" style="background-image: url('assets/img/photos/bin.jpg');">
+    <div class="container">
+      <div class="row justify-content-between">
         <div class="w-100">
 
           <div class="col-md-11 col-lg-8 col-xl-7 text-center mx-auto mb-5">
-            <h1 class="display-3 font-secondary font-weight-bolder mb-4">Hi, my name is Carlos.</h1>
+            <h1 class="display-3 font-weight-bold mb-4">¡Hi! I'm Carlos García.</h1>
             <div class="lead opacity-75">
-              I am backend developer .NET junior 
+              Backend programmer analyst with experience in .NET Core, my inbox is always open. If you have any questions or just
+              want to say hello, feel free to contact me to collaborate.
             </div>
           </div>
-
-          <div class="text-center">
-            <button type="button" class="landing-btn btn btn-lg rounded-pill">
-              <div class="col-12">
-                <a href="./assets/docs/CV.pdf" download="CV" class="btn btn-lg btn-outline-white">Download
-                  <strong>CV</strong>
-                </a>
-              </div>
-            </button>
+          
+          <div class="col-12 text-center">
+            <a href="#" class="btn btn-lg btn-outline-white"><strong>About me </strong></a>
           </div>
 
         </div>
       </div>
     </div>
   </div>
+</div>
   <!-- / Header -->
 
   <!-- Block -->
@@ -107,9 +103,10 @@
         <hr class="landing-separator border-primary mx-auto mt-5 mb-4" />
         <div class="lead mb-5">
           <p>
-            Hello! I am a junior developer from Mexico curious and ready to face challenges, I am constantly 
-            learning, I like technology, meeting people, music and sports, I like to learn new things without losing sight of 
-            my goals. I consider myself self-taught and I continue to learn from people with the same passion.
+            ¡Hi! I'm a junior Developer from México, curious and ready to face a new challenge. My passion drives me
+            to be constantly learning and exploring new tools. I enjoy meeting new people, as well as music and sports.
+            I consider myself an autodidact, and I love it to share ideas and knowledge without losing sight of my sight
+            goals.
           </p>
         </div>
         <div class="lead mb-5">
