--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </div>
           
           <div class="col-12 text-center">
-            <a href="#" class="btn btn-lg btn-outline-white"><strong>About me </strong></a>
+            <a class="btn btn-lg btn-outline-white" href="#About"><strong>About me </strong></a>
           </div>
 
         </div>
@@ -128,7 +128,7 @@
 
   <!-- Block -->
   <div id="Skills" class="theme-bg-white">
-    <div class="landing-block pb-5">
+    <div class="landing-block">
       <div class="container px-3">
         <div class="col-md-10 col-lg-8 col-xl-7 text-center p-0 mx-auto">
           <h1 class="display-4 font-weight-semibold mb-5">{ Skills }</h1>
@@ -195,6 +195,27 @@
       <div class="col-md-10 col-lg-8 col-xl-7 position-relative px-5 mx-auto">
         <div class="swiper-container w-auto text-center mx-3" id="landing-testimonials-slider">
           <div class="swiper-wrapper align-items-stretch">
+
+            <div class="swiper-slide h-auto">
+              <img src="assets/img/photos/crud.png" class="ui-w-80" alt />
+              <div class="ui-customer-review my-3">
+                Basic CRUD .NET
+              </div>
+
+              <div class="align-items-lg-center">
+                <a class="theme-text-dark" href="https://moviesstore.azurewebsites.net/swagger/index.html">
+                  <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
+                    <span><i class="bi bi-globe"></i></span>&nbsp; Website
+                  </button>
+                </a>
+                <a class="align-items-lg-center" href="https://github.com/Carlosdevelopp/CRUD_Movies_Store">
+                  <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
+                    <span><i class="bi bi-git"></i></span>&nbsp; See code
+                  </button>
+                </a>
+              </div>
+            </div>
+
             <div class="swiper-slide h-auto">
               <img src="assets/img/photos/portfolio.png" class="ui-w-80 rounded-0" alt />
               <div class="ui-customer-review my-3">
@@ -214,26 +235,6 @@
                 </a>
               </div>
 
-            </div>
-
-            <div class="swiper-slide h-auto">
-              <img src="assets/img/photos/crud.png" class="ui-w-80" alt />
-              <div class="ui-customer-review my-3">
-                Basic CRUD .NET
-              </div>
-
-              <div class="align-items-lg-center">
-                <a class="theme-text-dark">
-                  <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
-                    <span><i class="bi bi-globe"></i></span>&nbsp; Website
-                  </button>
-                </a>
-                <a class="align-items-lg-center" href="https://github.com/Carlosdevelopp/CRUD_Movies_Store">
-                  <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
-                    <span><i class="bi bi-git"></i></span>&nbsp; See code
-                  </button>
-                </a>
-              </div>
             </div>
             
           </div>
