--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
   <div class="uikit-example">
   <!-- Header -->
-  <div id="Home" class="jumbotron ui-hero ui-mh-100vh ui-bg-cover ui-bg-fixed text-white overflow-hidden" style="background-image: url('assets/img/photos/bin.jpg');">
+  <div id="Home" class="jumbotron ui-hero ui-mh-100vh ui-bg-cover ui-bg-fixed text-white overflow-hidden" style="background-image: url('assets/img/photos/t.jpg');">
     <div class="container">
       <div class="row justify-content-between">
         <div class="w-100">
