--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
   <div class="uikit-example">
   <!-- Header -->
-  <div id="Home" class="jumbotron ui-hero ui-mh-100vh ui-bg-cover ui-bg-fixed text-white overflow-hidden" style="background-image: url('assets/img/photos/t.jpg');">
+  <div id="Home" class="jumbotron ui-hero ui-mh-100vh ui-bg-cover ui-bg-fixed text-white overflow-hidden" style="background-image: url('assets/img/photos/Green.jpeg');">
     <div class="container">
       <div class="row justify-content-between">
         <div class="w-100">
@@ -182,7 +182,7 @@
 
   <!-- Block -->
   <div id="Proyects" class="landing-block ui-bg-cover ui-bg-fixed ui-bg-overlay-container text-white"
-    style="background-image: url(assets/img/photos/lap.jpg)">
+    style="background-image: url(assets/img/photos/g.jpeg)">
     <div class="ui-bg-overlay bg-dark opacity-75"></div>
     <div class="container px-3">
       <div class="text-center text-tiny font-weight-bold opacity-50 mb-3">
