--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
   <!-- / Header -->
 
   <!-- Block -->
-  <div id="About" class="landing-block bg-body ui-bg-overlay-container">
+  <div id="About" class="landing-block-about bg-body ui-bg-overlay-container">
     <div class="container px-3">
       <div class="col-md-10 col-lg-8 col-xl-7 text-center p-0 mx-auto">
         <h1 class="display-4 font-weight-semibold">{ About }</h1>
-        <hr class="landing-separator border-primary mx-auto mt-5 mb-4" />
-        <div class="lead mb-5">
+        <hr class="landing-separator border-primary mx-auto" />
+        <div class="lead">
           <p>
             ¡Hi! I'm a junior Developer from México, curious and ready to face a new challenge. My passion drives me
             to be constantly learning and exploring new tools. I enjoy meeting new people, as well as music and sports.
@@ -109,7 +109,7 @@
             goals.
           </p>
         </div>
-        <div class="lead mb-5">
+        <div class="lead mb-2">
           <span>Let's keep in touch through my social networks</span>
         </div>
         <div class="mt-5">
@@ -128,7 +128,7 @@
 
   <!-- Block -->
   <div id="Skills" class="theme-bg-white">
-    <div class="landing-block">
+    <div class="landing-block-skills">
       <div class="container px-3">
         <div class="col-md-10 col-lg-8 col-xl-7 text-center p-0 mx-auto">
           <h1 class="display-4 font-weight-semibold mb-5">{ Skills }</h1>
@@ -181,7 +181,7 @@
   <!-- / Block -->
 
   <!-- Block -->
-  <div id="Proyects" class="landing-block ui-bg-cover ui-bg-fixed ui-bg-overlay-container text-white"
+  <div id="Proyects" class="landing-block-proyect ui-bg-cover ui-bg-fixed ui-bg-overlay-container text-white"
     style="background-image: url(assets/img/photos/tech1.png)">
     <div class="ui-bg-overlay bg-dark opacity-75"></div>
     <div class="container px-3">
