--- a/index.html
+++ b/index.html
@@ -76,7 +76,19 @@
       <div class="row justify-content-between">
         <div class="w-100">
 
-          <div class="col-md-11 col-lg-8 col-xl-7 text-center mx-auto mb-5">
+          <!-- <div class="col-lg-7 col-xl-6 text-lg-left text-center my-5 mr-xl-5">
+            <h1 class="display-3 font-secondary text-dark font-weight-semibold mb-4">
+              Everything you need to reach awesomeness
+            </h1>
+            <p class="lead text-muted pb-3">
+              Lorem ipsum dolor sit amet, ius virtute suscipit te. Ius prima euismod consequat eu, cu quo alii scriptorem. Oratio aperiam per et, per euismod nominati forensibus cu.
+            </p>
+            <button type="button" class="landing-btn btn btn-lg rounded-pill btn-primary mt-2">
+              <span class="ion ion-logo-apple"></span>&nbsp; Download Now
+            </button>
+          </div> -->
+
+          <div class="col-md-11 col-lg-8 col-xl-7 text-lg-left text-center my-5 mx-auto">
             <h1 class="display-3 font-weight-bold mb-4">¡Hi! I'm Carlos García.</h1>
             <div class="lead opacity-75">
               Backend programmer analyst with experience in .NET Core, my inbox is always open. If you have any questions or just
